fix(frontend): fix some alignements and hover folders color

--- a/frontend/src/component/Search/ContentItemSearch.styl
+++ b/frontend/src/component/Search/ContentItemSearch.styl
@@ -2,19 +2,19 @@
 
 .content
   &__name.searchResultPage
-    flex 1
+    flex 8
     width 0
   &__path
-    flex 2
+    flex 7
     white-space nowrap
     overflow hidden
     text-overflow ellipsis
     margin-inline-end standardSpacing
     color fontColor
-    padding 5px
+    padding textSpacing
   &__search
     &__lastModification
-      flex 1
+      flex 7
       white-space nowrap
       overflow hidden
       text-overflow ellipsis
