--- a/frontend/src/component/Workspace/Folder.styl
+++ b/frontend/src/component/Workspace/Folder.styl
@@ -23,7 +23,7 @@ folderopen()
   .folder__header
     folderopen()
     &:hover
-      background-color lightGrey2
+      background-color lightGrey1
   > .folder__content
     folderclose()
     & > .file, > .folder
@@ -48,7 +48,7 @@ folderopen()
           // INFO - CH - 2019-08-07 - In the HTML, the .folder__header__triangleborder__triangle class also has .primaryColorFontLighten
           // So it always has it's font in the primary color but only uses it as border color on mousehover through "currentColor"
           border-top-color currentColor
-          color lightGrey2
+          color lightGrey1
     &__triangleborder
       display none
       position absolute
@@ -80,10 +80,10 @@ folderopen()
     &__dragPreview
       display flex
       align-items center
-      flex 3
+      flex 11
       width 0 // INFO - CH - 2019-06-06 - this allows the text-overflow ellipsis
     &__lastModification
-      flex 1
+      flex 4
       white-space nowrap
       overflow hidden
       text-overflow ellipsis
@@ -91,16 +91,15 @@ folderopen()
       color fontColor
       padding textSpacing
     &__icon
-      flex-grow 0
+      flex 1
       padding 0 standardSpacing
       font-size bigIconSize
       color offBlack
-      text-align center
     &__name
       display flex
       overflow hidden
       align-items center
-      flex 1
+      flex 11
       white-space nowrap
       span
         flex 1
@@ -114,8 +113,10 @@ folderopen()
         font-weight normal
     &__content
       position relative
-    &__button
-      flex-grow 0
+    &__button, .shareFolder__header__button
+      flex 2
+      display flex
+      justify-content flex-end
       &__advancedbtn
         position relative
       &__addbtn
@@ -131,9 +132,11 @@ folderopen()
       .addbtn__subdropdown
         padding 0
     &__status
-      flex-grow 0
-      padding 0 standardSpacing
+      flex 2
+      padding 0 textSpacing
       width 140px
+.folder__header div.shareFolder__header__button
+  flex 6
 
 @media (min-width: min-sm) and (max-width: max-sm)
   .folder
