--- a/frontend/src/css/ContentItemHeader.styl
+++ b/frontend/src/css/ContentItemHeader.styl
@@ -6,33 +6,34 @@ createInFolderButtonWidth = 74px
 .content__header
   display flex
   &__type
-    flex-grow 0
-    padding standardSpacing
-    text-align center
-  &__name
-    flex 2
-    padding standardSpacing
-    text-align start
-  &__status
-    flex-grow 0
-    padding standardSpacing
-    width 140px
-    text-align center
-  &__modification
     flex 1
     padding standardSpacing
     text-align start
+  &__name
+    flex 12
+    padding standardSpacing
+    text-align start
+  &__status
+    flex 2
+    padding standardSpacing
+    width 140px
+    text-align start
+  &__modification
+    flex 5
+    padding standardSpacing
+    text-align start
   &__actions
+    flex 3
     padding standardSpacing
   &__search
     display flex
-    flex-grow 5
+    flex-grow 18
     &__path
-      flex 2
+      flex 3
       padding 15px 5px
       text-align start
     &__modification
-      flex 1
+      flex 3
       padding 15px 5px
       text-align start
 
