--- a/frontend/src/css/Favorites.styl
+++ b/frontend/src/css/Favorites.styl
@@ -8,7 +8,7 @@
   justify-content space-between
   align-items center
   & > *
-    margin 0 standardSpacing
+    margin-inline-end standardSpacing
   &__type
     width 75px
     text-align center
