--- a/frontend_lib/src/component/Lists/ListHeader/TitleListHeader.styl
+++ b/frontend_lib/src/component/Lists/ListHeader/TitleListHeader.styl
@@ -4,6 +4,8 @@
   &__icon
     padding-inline-start textSpacing
     color darkGrey1
+  &__notSelected > span
+    margin-inline-end bigIconSize
   &:hover
     & .titleListHeader__icon
       color fontColor
